--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_BUTTER_CMS_API_KEY=457d9757af00ac29e78fd4ae1c84187228fe3180
+VITE_BUTTERCMS_API_KEY=457d9757af00ac29e78fd4ae1c84187228fe3180
+
